src/objects/Defect_Age__c.object
<CustomObject>
    <fields>
        <fullName>Defect__c</fullName>
        <label>Defect</label>
        <referenceTo>Defect__c</referenceTo>
        <relationshipLabel>Defect Ages</relationshipLabel>
        <relationshipName>Defect_Age</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_of_Days__c</fullName>
        <formula>IF( AND( ( ISNULL( Start_Date__c )),( ISNULL( End_Date__c )) ) ,0  , 
  IF( AND( NOT( ISNULL( Start_Date__c )),NOT( ISNULL( End_Date__c )) ) ,
  FLOOR(End_Date__c-Start_Date__c ) ,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No.of Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owning_Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Owning Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Defect Age</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DA-{0000}</displayFormat>
        <label>Defect Age Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defect Ages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>